styled transaction panel

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <button class="add-transaction"><i class="fas fa-plus"></i>Dodaj transakcję</button>
                 <button class="delete-all"><i class="fas fa-trash-alt"></i>Usuń wszystko</button>
             </div>
-            <div class="style-section">
+            <div class="style-selection">
                 <h2 class="title">Wybierz style</h2>
                 <div class="color-buttons">
                     <button class="light"></button>
