--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
             <h2 class="title">Lista transakcji</h2>
             <div class="transaction-list">
                 <div class="income-area">
-                    <h3>Przychód</h3>
-                    <div class="transaction" id="0">
+                    <h3>Przychód:</h3>
+                    <!-- <div class="transaction" id="0">
                         <p class="transaction-name"><i class="fas fa-money-bill-wave"></i>Wypłata</p>
                         <p class="transaction-amount">3500,00 zł <button class="delete"><i
                                     class="fas fa-times"></i></button> </p>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="expenses-area">
                     <h3>Wydatki:</h3>
-                    <div class="transaction" id="1">
+                    <!-- <div class="transaction" id="1">
                         <p class="transaction-name"><i class="fas fa-cart-arrow-down"></i>Zakupy</p>
                         <p class="transaction-amount">-120,00 zł <button class="delete"><i
                                     class="fas fa-times"></i></button> </p>
@@ -49,7 +49,7 @@
                         <p class="transaction-name"><i class="fas fa-film"></i>Kino</p>
                         <p class="transaction-amount">-70,00 zł <button class="delete"><i
                                     class="fas fa-times"></i></button> </p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -91,7 +91,7 @@
             <option value="none" selected disabled></option>
             <option value="income">[+] Przychód</option>
             <option value="shopping">[-] Zakupy</option>
-            <option value="food">[-] Jedzenie</option>
+            <option value="food">[-] Restauracje</option>
             <option value="cinema">[-] Kino</option>
         </select>
 
