--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <header>
-        <h1><i class="fas fa-wallet">Wallet</i></h1>
+        <h1><i class="fas fa-wallet"></i> Wallet</h1>
         <p>Twój menedżer finansów.</p>
     </header>
 
